fix(ep3): JWT en gateway, secretos locales y hardening EV2
Agrega validación JWT en el borde, documenta arranque/demos, sincroniza auth/attendance/academic sin secretos en repo y deja CORS solo en el gateway.

Co-authored-by: Cursor <cursoragent@cursor.com>